--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ h3{
 /*-----------------------------*/
 
 header{
-	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
+	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(css/img/hero.jpg);
 	background-size: cover;
 	background-position: center;
 	height: 100vh;
