--- a/style.css
+++ b/style.css
@@ -374,7 +374,7 @@ a:active {
 /*--------------------------------*/
 
 .section-testimonials {
-	background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
+	background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(css/img/back-customers.jpg);
 	background-size: cover;
 	color: #fff;
 	background-attachment: fixed;
